--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <li>HTML</li>
               <li>CSS</li>
               <li>JavaScript</li>
-              <li>Jquery</li>
+              <li>jQuery</li>
               <li>React</li>
             </ul>
           </div>
@@ -188,18 +188,21 @@
 
             <p>
               This app was completed in collaboration with Shawn Collette as
-              part of a paired project spanning two days, and was my first foray
-              into using JavaScript and Jquery to build an interactive user
-              experience.
+              part of a pair-programming challenge to craft an interactive user
+              experience using JavaScript and jQuery.
             </p>
           </div>
 
           <h3>Technologies Used</h3>
 
           <div class="icons">
-            <i class="fab fa-html5"><br /><span class="icon-font">HTML5</span></i>
+            <i class="fab fa-html5"
+              ><br /><span class="icon-font">HTML5</span></i
+            >
             <i class="fab fa-css3"><br /><span class="icon-font">CSS3</span></i>
-            <i class="fab fa-js"><br /><span class="icon-font">JavaScript ES6</span></i>
+            <i class="fab fa-js"
+              ><br /><span class="icon-font">JavaScript ES6</span></i
+            >
           </div>
         </div>
       </section>
@@ -241,12 +244,9 @@
             </p>
 
             <p>
-              My first solo project! From humble beginnings... <br />
-              Completed over the course of three days, MarkIt also represents my
-              first time working with a third-party API to store and retrieve
-              user input. Using jQuery to manage the state of the application
-              was instructive, and great preparation for approaching React in
-              later projects.
+              MarkIt makes use of Thinkful's bookmark API in order to persist
+              user input, and utilizes JavaScript's Fetch API to retrieve the
+              user's saved data.
             </p>
           </div>
 
@@ -260,7 +260,9 @@
               </span>
             </i>
             <i class="fab fa-css3"><br /><span class="icon-font">CSS4</span></i>
-            <i class="fab fa-js"><br /><span class="icon-font">JavaScript ES6</span></i>
+            <i class="fab fa-js"
+              ><br /><span class="icon-font">JavaScript ES6</span></i
+            >
           </div>
         </div>
       </section>
@@ -295,23 +297,24 @@
 
           <div class="project description">
             <p>
-              Totspots is a reviews and trip-planning app that helps parents to
-              find kid-friendly places and events to hang out in their town.
-              With Totspots, parents can find need-to-know information such as:
+              Totspots is a reviews and trip-planning app that helps parents
+              find kid-friendly places to hang out in their town. With Totspots,
+              parents can find need-to-know information about establishments
+              around their city, such as:
             </p>
             <ul>
-              <li>Are there changing tables here?</li>
-              <li>Is it stroller accessible?</li>
-              <li>Are there kid's specials?</li>
+              <li>Does this coffee shop have changing tables?</li>
+              <li>Is this store stroller accessible?</li>
+              <li>Does this restaurant offer kid's specials?</li>
             </ul>
             <p>
               All ratings and reviews are user-generated and vetted by the
               community through an upvote system.
             </p>
             <p>
-              My first full-stack deployment, Totspots was inspired by my
-              experiences as a new father, and much of the functionality took
-              form over several conversations with fellow new parents in my
+              Totspots is inspired by my experiences as a new father, and much
+              of the core concept of this application took form over the course
+              of several conversations with fellow new parents in my
               neighborhood. Presently, the project only contains points of
               interest in Durham, NC (a wonderful place to be!), but there are
               plans for expansion in the near future.
@@ -322,10 +325,10 @@
 
           <div class="icons">
             <i class="fab fa-react">
-                <br />
-                <span class="icon-font">
-                  ReactJS
-                </span>
+              <br />
+              <span class="icon-font">
+                ReactJS
+              </span>
             </i>
             <i class="fab fa-node-js">
               <br />
@@ -340,10 +343,10 @@
               </span>
             </i>
             <i class="fab fa-css3">
-          <br />
-          <span class="icon-font">
-            CSS3 
-          </span>
+              <br />
+              <span class="icon-font">
+                CSS3
+              </span>
             </i>
           </div>
         </div>
@@ -391,20 +394,19 @@
 
             <p>
               CleverGerman was created in collaboration with my collegue EJ
-              Gonzalez as part of a five-day challenge to create a full-stack
-              application utilizing a linked-list data structure to implement a
-              spaced-repetiton algorithm.
+              Gonzalez as part of a five-day challenge, and utilizes a
+              linked-list data structure to implement a spaced-repetition
+              algorithm.
             </p>
           </div>
 
           <h3>Technologies Used</h3>
           <div class="icons">
             <i class="fab fa-react">
-          <br />
-          <span class="icon-font">
-              ReactJS
-          </span>
-
+              <br />
+              <span class="icon-font">
+                ReactJS
+              </span>
             </i>
             <i class="fab fa-node-js">
               <br />
@@ -463,9 +465,8 @@
               Users can create a household, add members to that household,
               create tasks and award points to members for completing them.
               Household members can view the tasks assigned to them, as well as
-              their total score and ranking against their siblings. Earning
-              points by completing tasks allows kids to "level up" and earn
-              badges.
+              their total score and ranking against their siblings. As kids earn
+              points, they can "level up" and earn cool new badges!
             </p>
             <p>
               ChoreRunner was completed in collaboration with Yulia
@@ -481,11 +482,10 @@
 
           <div class="icons">
             <i class="fab fa-react">
-          <br />
-          <span class="icon-font">
-              ReactJS
-          </span>
-
+              <br />
+              <span class="icon-font">
+                ReactJS
+              </span>
             </i>
             <i class="fab fa-node-js">
               <br />
