updated db icon

--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
             <br />
             <span class="icon-font">JavaScript</span>
           </i>
-          <div class="mongoIcon">
-            <img src="images/mongodb.svg" alt="mongodb logo" width="30px" height="30px" />
+          <i class="fas fa-database">
             <br />
             <span class="icon-font">MongoDB</span>
-          </div>
+          </i>
+         
         </div>
     </section>
     <!-- 
