--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <div>
         <p>
-          My name is Daniel Nichols and I am an aspiring Full-Stack Developer
+          My name is Daniel Nichols and I am a Full-Stack Developer
           based in the Raleigh/Durham area. A man of many skills, I began my
           career in small business, then moved into non-profit management
           before entering the field of public education as a middle school
@@ -80,8 +80,8 @@
         </p>
 
         <p>
-          Outside of programming, I enjoy learning new languages (I have a
-          soft spot for German) and my latest hobby, brewing. I am also a
+          Outside of programming, I enjoy learning new languages (<em>I have a
+            soft spot for German</em>) and my latest hobby, brewing. I am also a
           musician and avid hiker, completing a “thru-hike” of the Appalachian
           Trail in 2013.
         </p>
@@ -156,12 +156,9 @@
             Inspired by my own experiences during a successful five-month
             ‘thru-hike’ of the Appalachian Trail, this quiz app tests your
             knowledge of AT culture and lore.
-          </p>
 
-          <p>
-            This app was completed in collaboration with Shawn Collette as
-            part of a pair-programming challenge to craft an interactive user
-            experience using JavaScript and jQuery.
+          <p>This application keeps a running total for the player's score, generates feedback and fun facts about the
+            Trail after each answer, and assigns a ranking at the end of the quiz.
           </p>
         </div>
 
@@ -170,7 +167,7 @@
         <div class="icons">
           <i class="fab fa-html5"><br /><span class="icon-font">HTML5</span></i>
           <i class="fab fa-css3"><br /><span class="icon-font">CSS3</span></i>
-          <i class="fab fa-js"><br /><span class="icon-font">JavaScript ES6</span></i>
+          <i class="fab fa-js"><br /><span class="icon-font">JavaScript</span></i>
         </div>
       </div>
     </section>
@@ -222,94 +219,9 @@
             <br />
             <span class="icon-font">MongoDB</span>
           </i>
-         
+
         </div>
     </section>
-    <!-- 
-      <section class="profile projects">
-        <div class="profile projects project">
-          <h3>Totspots</h3>
-          <div class="half">
-            <div class="project-image">
-              <a target="_blank" href="https://totspots.now.sh/"
-                ><img
-                  src="images/Totspots.png"
-                  alt="Totspots application screenshot"
-              /></a>
-            </div>
-            <div class="project-buttons">
-              <a target="_blank" class="button" href="https://totspots.now.sh"
-                >Live</a
-              >
-              <a
-                target="_blank"
-                href="https://github.com/DanielCNichols/totspots-app"
-                >View client</a
-              >
-              <a
-                target="_blank"
-                href="https://github.com/DanielCNichols/totspots-server"
-                >View server</a
-              >
-            </div>
-          </div>
-
-          <div class="project description">
-            <p>
-              Totspots is a reviews and trip-planning app that helps parents
-              find kid-friendly places to hang out in their town. With Totspots,
-              parents can find need-to-know information about establishments
-              around their city, such as:
-            </p>
-            <ul>
-              <li>Does this coffee shop have changing tables?</li>
-              <li>Is this store stroller accessible?</li>
-              <li>Does this restaurant offer kid's specials?</li>
-            </ul>
-            <p>
-              All ratings and reviews are user-generated and vetted by the
-              community through an upvote system.
-            </p>
-            <p>
-              Totspots is inspired by my experiences as a new father, and much
-              of the core concept of this application took form over the course
-              of several conversations with fellow new parents in my
-              neighborhood. Presently, the project only contains points of
-              interest in Durham, NC (a wonderful place to be!), but there are
-              plans for expansion in the near future.
-            </p>
-          </div>
-
-          <h3>Technologies Used</h3>
-
-          <div class="icons">
-            <i class="fab fa-react">
-              <br />
-              <span class="icon-font">
-                ReactJS
-              </span>
-            </i>
-            <i class="fab fa-node-js">
-              <br />
-              <span class="icon-font">
-                NodeJS
-              </span>
-            </i>
-            <i class="fas fa-database">
-              <br />
-              <span class="icon-font">
-                PostgreSQL
-              </span>
-            </i>
-            <i class="fab fa-css3">
-              <br />
-              <span class="icon-font">
-                CSS3
-              </span>
-            </i>
-          </div>
-        </div>
-      </section> -->
 
     <section class="profile projects">
       <div class="profile projects project">
@@ -410,7 +322,7 @@
           <i class="fab fa-react">
             <br />
             <span class="icon-font">
-             React
+              React
             </span>
           </i>
           <i class="fab fa-node-js">
