updated project links

--- a/index.html
+++ b/index.html
@@ -228,13 +228,13 @@
         <h3>CleverGerman</h3>
         <div class="half">
           <div class="project-image">
-            <a target="_blank" href="https://clevergerman.netlify.com/"><img src="images/CleverGerman.png"
+            <a target="_blank" href="https://clever-german.vercel.app/register"><img src="images/CleverGerman.png"
                 alt="CleverGerman Application Screenshot" /></a>
           </div>
           <div class="project-buttons">
-            <a target="_blank" class="button" href="https://clevergerman.netlify.com/">Live</a>
-            <a target="_blank" href="https://github.com/EJ132/EJ-Daniel-Repetition-Capstone">View client</a>
-            <a target="_blank" href="https://github.com/thinkful-ei-gecko/Daniel-EJ-Spaced-Repetition-API">View
+            <a target="_blank" class="button" href="https://clever-german.vercel.app/register">Live</a>
+            <a target="_blank" href="https://github.com/DanielCNichols/CleverGerman-Client">View client</a>
+            <a target="_blank" href="https://github.com/DanielCNichols/CleverGerman-API">View
               server</a>
           </div>
         </div>
@@ -290,7 +290,7 @@
                 alt="Chorerunner application screenshot" /></a>
           </div>
           <div class="project-buttons">
-            <a target="_blank" class="button" href="https://chorerunner-run.now.sh/">Live</a>
+            <a target="_blank" class="button" href="https://chorerunner-run.vercel.app/">Live</a>
             <a target="_blank" href="https://github.com/DanielCNichols/ChoreRunner-Client-">View Client</a>
             <a target="_blank" href="https://github.com/DanielCNichols/ChoreRunner-API">View server</a>
           </div>
